# DATX02-15-29

./: .gitignore  DATX.cabal  HPR.ast.hs  HPR.core  HPR.hip  HPR.hpr  HPR.typed.hs  Hopper.cabal  LICENSE  M.hpr  NewTest.hip  NewTest.hpr  NewTest.typed.hs  OldPrelude.hpr  Prelude.ast.hs  Prelude.core  Prelude.hip  Prelude.hpr  Prelude.typed.hs  Prim.erl  README.md  Test.ast.hs  Test.core  Test.hip  Test.hpr  Test.typed.hs
src/: AST.hs  CodeGenerator.hs  Grammar.cf  HPR.CORE  HPR.hip  HPR.hop  HPR.hop.hpr  HPR.hpr  HelloString.CORE  HelloString.hpr  Hopper.cf  Main.hs  Syntax.hpr  TODO.lhs  curry.erl  erl.core  erl.erl  log.txt  test2.hpr
src/AST/: AST.hs  DevTC_AST.hs  Liam_TC_AST.hs
src/BrokenParser/: BrokenParHopper.hs  Cool.hpr  Cool.txt  LexHopper.hs  ParHopper.hs
src/CodeGenerator/: BeamWriter.hs  CodeGen.hs  CodeGenerator.hs
src/Compiler/: Compiler.hs
src/DependencyChecker/: DependencyChecker.hs
src/DependencyChecker/Internal/: DependencyChecker.hs
src/Parser/: AbsHopper.hs  DocHopper.tex  DocHopper.txt  ErrM.hs  LayoutHopper.hs  LexHopper.x  ParHopper.y  Parser.hs  PrintHopper.hs  SkelHopper.hs  TestHopper.hs
src/Renamer/: PreCodeGen.hs  Rename.hs  Renamer.hs
src/TypeChecker/: AST.hs  Convert.hs  OldTC.hs  SimpleCodeGen.hs  TC.hs  TypeChecker.hs  TypeCheckerTest.hs
src/Utils/: BIF.hs  BeamWriter.hs  ErrM.hs  HipFile.hs  PathTools.hs  PrettyPrint.hs
tests/: CodeGenTests.hs  CodeGenerator.hs  DependencyChecker.hs  ParserTests.hs  RenameTests.hs  Renamer.hpr  Syntax.hpr  Test.hs  Test2.core  Test2.hpr  Test4.hpr  TestGrammar.hpr
tests/Bugs/: RenamerMergingLambdaWithCase.hs
tests/DependencyChecker/: Tests.hs
tests/DependencyChecker/Bad/: InvalidName.hop
tests/DependencyChecker/Good/: Apa.hpr  Bepa.hpr  Cepa.hpr  ImportNoImports.hpr  NoImports.hop
tests/ParserTests/: Tests.hs
tests/ParserTests/Bad/: Bad01.hpr  Bad02.hpr  Bad03.hpr  Bad04.hpr  Bad05.hpr  Bad06.hpr  Bad07.hpr
tests/ParserTests/Good/: Good02.hpr  Good03.hpr  Good04.hpr  Good05.hpr  Good06.hpr  Good08.hpr  Good09.hpr  Good10.hpr
