name:                Hopper
version:             0.1.0.0
synopsis:            Haskell-like language on the Erlang VM
license:             AllRightsReserved
license-file:        LICENSE
author:              DATX02-15-29
maintainer:          datx02-15-29@googlegroups.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hopper
  main-is:             Main.hs
  build-tools:         alex, happy
  other-modules:       Parser.LexHopper,
                       Parser.ParHopper
  build-depends:       base >=4.7 && <4.8,
                       array >=0.5
  GHC-Options:         -O2 -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-hopper 
    type:              exitcode-stdio-1.0
    main-is:           Test.hs
    hs-source-dirs:    tests, src
    build-depends:     base >=4.7 && <4.8, 
                       array >=0.5,
                       HUnit,
                       test-framework,
                       test-framework-hunit
    default-language:  Haskell2010

